# Fake3DRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  configure.bat  configure.sh  main.cpp
include/: BasicCamera.hh  Buffer.cc  Buffer.hh  Cuboid.cc  Cuboid.hh  Example.shader  Fake3DEngine.hh  GlobalConstans.hh  GraphicBase.hh  InputController.hh  NaiveSphere.cc  NaiveSphere.hh  PlatformUtils.hh  PoolBall.cc  PoolBall.hh  Renderable.hh  Shader.hh  ShaderEngine.hh  ShaderEngineFactory.hh  ShaderManager.hh  SimpleClock.hh  SunSphere.cc  SunSphere.hh  Surface.cc  Surface.hh  TextureCuboid.hh  TextureManager.cc  TextureManager.hh  Triangle.hh  Utils.hh  Windowable.hh  stb_image.hh
source/: BasicCamera.cc  Cuboid.h  Cuboid.hh  Fake3DEngine.cc  GlobalConstans.cc  InputController.hh  Renderable.hh  Shader.hh  ShaderEngine.cc  ShaderManager.cc  ShaderManager.hh  SimpleClock.cc  TextureManager.cc  Triangle.cc  Triangle.hh  Utils.cc  Windowable.cc
texture/: CopyRights
